@@ -1,4 +1,4 @@
-/* $Id: client.c,v 1.11 2007-10-03 21:31:07 nicm Exp $ */
+/* $Id: client.c,v 1.12 2007-10-04 11:52:02 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -174,6 +174,10 @@ client_main(struct client_ctx *cctx)
 	local_done();
 
 	if (error != NULL) {
+		if (*error == '\0') {
+			printf("[exited]\n", error);
+			return (0);
+		}
 		printf("[error: %s]\n", error);
 		return (1);
 	}
