@@ -1,5 +1,7 @@
 04 October 2007
 
+* (nicm) attach-session (can't believe I forgot it until now!) and list-windows
+  commands.
 * (nicm) rename-window and select-window commands.
 * (nicm) set-option command (alias set): "tmux set-option prefix ^A".
 * (nicm) Key binding and unbinding is back.
@@ -110,5 +112,5 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.30 2007-10-04 10:54:20 nicm Exp $
+$Id: CHANGES,v 1.31 2007-10-04 11:52:02 nicm Exp $
 
